<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_poster_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_movie_poster"
            android:layout_width="@dimen/upcomingItemWidth"
            android:layout_height="@dimen/upcomingItemHeight"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_movie_poster" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:padding="@dimen/padding4dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize28sp"
        app:layout_constraintEnd_toEndOf="@id/cardView_poster_wrapper"
        app:layout_constraintStart_toStartOf="@id/cardView_poster_wrapper"
        app:layout_constraintTop_toBottomOf="@id/cardView_poster_wrapper"
        tools:text="@string/dummy_movie_name" />

    <TextView
        android:id="@+id/textView_movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize16sp"
        app:layout_constraintEnd_toEndOf="@id/textView_movie_title"
        app:layout_constraintStart_toStartOf="@id/textView_movie_title"
        app:layout_constraintTop_toBottomOf="@id/textView_movie_title"
        tools:text="@string/dummy_release_date" />

    <TextView
        android:id="@+id/textView_movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin8dp"
        android:layout_marginEnd="@dimen/margin8dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/padding8dp"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/textView_movie_release_date"
        app:layout_constraintStart_toStartOf="@id/textView_movie_release_date"
        app:layout_constraintTop_toBottomOf="@id/textView_movie_release_date"
        tools:text="@string/dummy_movie_overview" />

</androidx.constraintlayout.widget.ConstraintLayout>