<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewState"
            type="me.turkergoksu.kefilm.movie_detail.ui.MovieDetailViewState" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewPoster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_movie_detail_poster"
                android:foreground="@color/transparent_black"
                android:image="@{viewState.posterUrl}"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/dummy_movie_poster" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:progressBackgroundTint="@color/light_gray"
                android:progressTint="@color/rating_bar_color"
                android:rating="@{viewState.rating}"
                android:secondaryProgressTint="@color/rating_bar_color"
                app:layout_constraintBottom_toBottomOf="@id/imageViewPoster"
                app:layout_constraintStart_toStartOf="@id/imageViewPoster"
                tools:rating="3.3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{viewState.voteCountText}"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintBottom_toBottomOf="@id/ratingBar"
                app:layout_constraintStart_toEndOf="@id/ratingBar"
                app:layout_constraintTop_toTopOf="@id/ratingBar"
                tools:text="(9999)" />

            <TextView
                android:id="@+id/textViewYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:fontFamily="@font/montserrat"
                android:text="@{viewState.year}"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/imageViewPoster"
                tools:text="@string/dummy_movie_release_year" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat"
                android:maxLines="2"
                android:text="@{viewState.title}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_24sp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/textViewYear"
                tools:text="@string/dummy_movie_name" />

            <TextView
                android:id="@+id/textView_movie_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@{viewState.overview}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/textViewTitle"
                tools:text="@string/dummy_movie_overview" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>